--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 # [START runtime]
-service: autocomplete
+service: default
 runtime: nodejs
 env: flex
 # [END runtime]
@@ -10,10 +10,4 @@ env_variables:
   MYSQL_DATABASE: prodcat
   # e.g. my-awesome-project:us-central1:my-cloud-sql-instance
   INSTANCE_CONNECTION_NAME: bill-hahn-sandbox:us-central1:myinstance
-  
-beta_settings:
-  # The connection name of your instance, available by using
-  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
-  # the Instance details page in the Google Cloud Platform Console.
-  cloud_sql_instances: bill-hahn-sandbox:us-central1:myinstance
   
