--- a/app.yaml
+++ b/app.yaml
@@ -11,3 +11,8 @@ env_variables:
   # e.g. my-awesome-project:us-central1:my-cloud-sql-instance
   INSTANCE_CONNECTION_NAME: bill-hahn-sandbox:us-central1:myinstance
   
+beta_settings:
+  # The connection name of your instance, available by using
+  # 'gcloud beta sql instances describe [INSTANCE_NAME]' or from
+  # the Instance details page in the Google Cloud Platform Console.
+  cloud_sql_instances: bill-hahn-sandbox:us-central1:myinstance
